tests/negative/parser/dyn_non_ident.orng
fn main() -> Int { 
    &dyn {Int}
}
